minor, read options through getopt
Signed-off-by: Sebastian Freundt <sebastian.freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ CLEANFILES = $(BUILT_SOURCES)
 bin_PROGRAMS += truffle
 truffle_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 truffle_LDFLAGS = $(AM_LDFLAGS)
+BUILT_SOURCES += truffle-clo.c
 
 ## ggo rule
 %.c: %.ggo
