minor, provide check target infrastructure
Signed-off-by: Sebastian Freundt <sebastian.freundt@ga-group.nl>

Conflicts:

	configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,7 @@ apps=" truffle"
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
+AC_CONFIG_FILES([test/Makefile])
 AC_OUTPUT
 
 echo
