--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 ### Makefile.am
 
 AM_CPPFLAGS = -D_GNU_SOURCE -D_POSIX_C_SOURCE=201001L -D__USE_XOPEN2K8
-AM_LDFLAGS = -lm
+AM_LDFLAGS =
 
 bin_PROGRAMS =
 noinst_PROGRAMS =
