--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,6 +11,7 @@ CLEANFILES =
 EXTRA_DIST = $(BUILT_SOURCES)
 
 bin_PROGRAMS += truffle
+truffle_SOURCES = truffle.c truffle-clo.ggo
 truffle_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 truffle_LDFLAGS = $(AM_LDFLAGS)
 BUILT_SOURCES += truffle-clo.c truffle-clo.h
