--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,7 @@ bin_PROGRAMS += truffle
 truffle_SOURCES = truffle.c truffle-clo.ggo
 truffle_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 truffle_LDFLAGS = $(AM_LDFLAGS)
+truffle_LDADD = -lm
 BUILT_SOURCES += truffle-clo.c truffle-clo.h
 
 ## ggo rule
