minor, actually create a file .version upon autoreconf
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ dnl Autoconf startup.
 dnl -------------------------------------------------------------------------
 
 AC_PREREQ([2.63])
-AC_INIT([truffle], m4_esyscmd([./git-version-gen]), [https://trac.ga-group.nl/freundt_devel/])
+AC_INIT([truffle], m4_esyscmd([./git-version-gen .version]), [https://trac.ga-group.nl/freundt_devel/])
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_MACRO_DIR([m4])
