fix, actually distribute the tests
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,6 +4,9 @@
 LANG=C
 LC_ALL=C
 
+EXTRA_DIST = $(TESTS)
+EXTRA_DIST += $(TRUFTEST_LOG_COMPILER)
+
 TESTS = toy1.truftest toy2.truftest toy3.truftest toy4.truftest toy5.truftest
 TEST_EXTENSIONS = .truftest
 TRUFTEST_LOG_COMPILER = $(srcdir)/check-truffle.sh
