--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,12 @@ dnl Autoconf startup.
 dnl -------------------------------------------------------------------------
 
 AC_PREREQ([2.63])
-AC_INIT([truffle], m4_esyscmd([./git-version-gen .version]), [https://github.com/hroptatyr/truffle])
+m4_define([GIT_VERSION_GEN], [dnl
+pushdef([version], [m4_esyscmd([./git-version-gen])])dnl
+ifelse([]version[], [], [0.1.0], []version[])[]dnl
+popdef([version])dnl
+])
+AC_INIT([truffle], [GIT_VERSION_GEN], [https://github.com/hroptatyr/truffle])
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_MACRO_DIR([m4])
