--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_COPYRIGHT(
 ])
 
 AM_INIT_AUTOMAKE([foreign parallel-tests dist-xz])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 if test -z "${CFLAGS}"; then
 	CFLAGS="-g -O3 -Wall -Wunused -Wunused-function -Wuninitialized"
