--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ compiler:
 
 before_script:
   - sudo apt-get install -qq gengetopt
+  - autoreconf -vfi
 
 script: ./configure && make && make check
 
