tests, add clean rule for local tempdirs
They are not automatically removed when test fails.

Signed-off-by: Sebastian Freundt <freundt@fresse.org>

Conflicts:
	test/Makefile.am

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -54,4 +54,7 @@ EXTRA_DIST += toy7.schema
 %.c %.h: %.ggo
 	$(AM_V_GEN) gengetopt -F $* -i $<
 
+clean-local:
+	-rm -rf *.tmpd
+
 ## Makefile.am ends here
