--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ EXTRA_DIST = $(BUILT_SOURCES)
 
 bin_PROGRAMS += truffle
 truffle_SOURCES = truffle.c truffle-clo.ggo
+truffle_SOURCES += yd.h
 truffle_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 truffle_LDFLAGS = $(AM_LDFLAGS)
 truffle_LDADD = -lm
