chore, check for RANLIB to be able to create lib archives
Signed-off-by: Sebastian Freundt <freundt@fresse.org>

--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,7 @@ SXE_CHECK_CC([c11 c1x c99 gnu99])
 SXE_CHECK_CFLAGS
 AC_CHECK_TOOLS([AR], [xiar ar], [false])
 AC_C_BIGENDIAN
+AC_PROG_RANLIB
 
 ## trivial, no special stuff needed
 apps=" truffle"
