fix, PEBKAC, it's libtruffle.a first then -lm
Signed-off-by: Sebastian Freundt <freundt@fresse.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,8 +20,8 @@ bin_PROGRAMS += truffle
 truffle_SOURCES = truffle.c truffle.h truffle-clo.ggo
 truffle_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 truffle_LDFLAGS = $(AM_LDFLAGS)
-truffle_LDADD = -lm
-truffle_LDADD += libtruffle.a
+truffle_LDADD = libtruffle.a
+truffle_LDADD += -lm
 BUILT_SOURCES += truffle-clo.c truffle-clo.h
 
 noinst_PROGRAMS += trod
