minor, build libtruffle with series support
Signed-off-by: Sebastian Freundt <freundt@fresse.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
 libtruffle_a_SOURCES += gq.c gq.h
 libtruffle_a_SOURCES += gbs.c gbs.h
 libtruffle_a_SOURCES += schema.c schema.h
+libtruffle_a_SOURCES += series.c series.h
 libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.h
