fix, PEBKAC, it's toy1.mmy.series for series-over-mmy reader regressions
Signed-off-by: Sebastian Freundt <freundt@fresse.org>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -80,7 +80,7 @@ EXTRA_DIST += toy5.trod
 
 TESTS += toy1.1.mmy.truftest
 TESTS += toy1.2.mmy.truftest
-EXTRA_DIST += toy1.mmy.schema
+EXTRA_DIST += toy1.mmy.series
 
 
 ## ggo rule
