test, provide regressions for trod and schema contract mode
Signed-off-by: Sebastian Freundt <freundt@fresse.org>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -85,6 +85,14 @@ EXTRA_DIST += toy1.mmy.series
 TESTS += trod.1.truftest
 EXTRA_DIST += toy1.trod
 
+TESTS += truffle_schema_contracts.1.deflt.truftest
+TESTS += truffle_schema_contracts.1.abs.truftest
+TESTS += truffle_schema_contracts.1.oco.truftest
+
+TESTS += truffle_trod_contracts.1.deflt.truftest
+TESTS += truffle_trod_contracts.1.abs.truftest
+TESTS += truffle_trod_contracts.1.oco.truftest
+
 
 ## ggo rule
 %.c %.h: %.ggo
