--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,8 @@ AC_PROG_RANLIB
 AM_MISSING_PROG([HELP2MAN], [help2man], ["${missing_dir}"])
 
 ## trivial, no special stuff needed
-apps=" truffle"
+apps="${apps} truffle"
+apps="${apps} trod"
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
