--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,7 @@ apps="${apps} trod"
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
+AC_CONFIG_FILES([info/Makefile])
 AC_CONFIG_FILES([test/Makefile])
 AC_OUTPUT
 
