--- a/info/Makefile.am
+++ b/info/Makefile.am
@@ -20,6 +20,7 @@ EXTRA_DIST += author.h2m
 ## help2man helpers
 %.man: $(top_srcdir)/src/%-clo.ggo $(top_srcdir)/configure
 	$(AM_V_GEN) $(HELP2MAN) -S "$(PACKAGE_STRING)" -p "($(PACKAGE))$*" \
+		--no-info \
 		-I "$(srcdir)/$*.name" \
 		-I "$(srcdir)/author.h2m" \
 		-o $@ $(top_builddir)/src/$*
