--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,18 @@ compiler:
   - gcc
   - clang
 
-before_script:
+before_install:
+  - sudo apt-get -qq update
+
+install:
   - sudo apt-get install -qq gengetopt
+
+before_script:
   - autoreconf -vfi
 
-script: ./configure && make && make check
+script:
+  - ./configure || (cat config.log && false)
+  - make clean all check distcheck || (cat test/test-suite.log && false)
 
 ## whitelist
 branches:
