bldchn, generate version.mk at configure and make time

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_builddir)/version.mk
+
 LANG = C
 LC_ALL = C
 
@@ -9,6 +11,13 @@ SUBDIRS += info
 SUBDIRS += test
 
 EXTRA_DIST =
+DISTCLEANFILES =
+
 EXTRA_DIST += git-version-gen
 EXTRA_DIST += m4/.dir
 
+DISTCLEANFILES += version.mk
+
+dist-hook:
+	echo $(VERSION) > $(distdir)/version \
+	&& touch -r $(top_builddir)/version.mk $(distdir)/version
