--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_builddir)/version.mk
+
 # Help the Developers and yourself. Just use the C locale and settings
 # for the compilation. They can still be overriden by make LANG=<whatever>
 # but that is general a not very good idea
