--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,9 +46,15 @@ BUILT_SOURCES += trod-clo.c trod-clo.h
 version_defs.h: $(top_builddir)/version.mk Makefile
 	echo '#define VERSION "$(VERSION)"' > $@
 
-## ggo rule
-%.c %.h: %.ggo
-	gengetopt -l -i $< -F $*
+## gengetopt rule with sed hack to avoid using VERSION and config.h
+## depend on Makefile.am to survive a git pull
+%.c %.h: %.ggo Makefile.am
+	gengetopt -l -i $< -F $*  \
+	&& sed \
+	  -e 's,config.h,version.h,g' \
+	  -e 's,\(.*\)_PARSER_VERSION VERSION,\1_PARSER_VERSION git_version_string,g' \
+	  $*.h >$*.h-t \
+	&& mv $*.h-t $*.h
 
 # 
 # Help the developers get nice post-processed source files
