--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -108,10 +108,15 @@ TESTS += truffle_trod_contracts.1.deflt.truftest
 TESTS += truffle_trod_contracts.1.abs.truftest
 TESTS += truffle_trod_contracts.1.oco.truftest
 
-
-## ggo rule
-%.c %.h: %.ggo
-	$(AM_V_GEN) gengetopt -F $* -i $<
+## gengetopt rule with sed hack to avoid using VERSION and config.h
+## depend on Makefile.am to survive a git pull
+%.c %.h: %.ggo Makefile.am
+	gengetopt -l -i $< -F $*  \
+	&& sed \
+	  -e 's,config.h,version.h,g' \
+	  -e 's,\(.*\)_PARSER_VERSION VERSION,\1_PARSER_VERSION git_version_string,g' \
+	  $*.h >$*.h-t \
+	&& mv $*.h-t $*.h
 
 clean-local:
 	-rm -rf *.tmpd
