minor, migrate trod.c and schema.c to using daisy.c funs
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,8 @@ libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
 libtruffle_a_SOURCES += version.c
+EXTRA_libtruffle_a_SOURCES =
+EXTRA_libtruffle_a_SOURCES += daisy.c
 noinst_HEADERS += version.h
 BUILT_SOURCES += version_defs.h
 CLEANFILES += version_defs.h
@@ -37,6 +39,8 @@ BUILT_SOURCES += truffle-clo.c truffle-clo.h
 bin_PROGRAMS += trod
 trod_SOURCES = trod.c trod-clo.ggo
 trod_SOURCES += mmy.h
+EXTRA_trod_SOURCES =
+EXTRA_trod_SOURCES += daisy.c
 trod_CPPFLAGS = $(AM_CPPFLAGS) -DSTANDALONE
 trod_LDFLAGS = $(AM_LDFLAGS)
 trod_LDADD = libtruffle.a
