minor, import wheap stuff to build trod wheaps
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,8 @@ libtruffle_a_SOURCES += series.c series.h
 libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
+libtruffle_a_SOURCES += wheap.c wheap.h
+libtruffle_a_SOURCES += instant.h
 nodist_libtruffle_a_SOURCES = version.c
 EXTRA_libtruffle_a_SOURCES =
 EXTRA_libtruffle_a_SOURCES += daisy.c
