--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,10 +22,10 @@ libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
 libtruffle_a_SOURCES += wheap.c wheap.h
-libtruffle_a_SOURCES += instant.h
+libtruffle_a_SOURCES += instant.c instant.h
+libtruffle_a_SOURCES += daisy.c daisy.h
+libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
 nodist_libtruffle_a_SOURCES = version.c
-EXTRA_libtruffle_a_SOURCES =
-EXTRA_libtruffle_a_SOURCES += daisy.c
 noinst_HEADERS += version.h
 CLEANFILES += version.c
 EXTRA_DIST += version.c.in
