fix, PEBKAC, list nifty.h as SOURCE
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ CLEANFILES =
 EXTRA_DIST = $(BUILT_SOURCES)
 
 noinst_LIBRARIES = libtruffle.a
-libtruffle_a_SOURCES = yd.h
+libtruffle_a_SOURCES =
 libtruffle_a_SOURCES += truf-dfp754.c truf-dfp754.h
 libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
 libtruffle_a_SOURCES += gq.c gq.h
@@ -24,9 +24,11 @@ libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
 libtruffle_a_SOURCES += wheap.c wheap.h
 libtruffle_a_SOURCES += instant.c instant.h
+libtruffle_a_SOURCES += yd.h
 libtruffle_a_SOURCES += idate.c idate.h
 libtruffle_a_SOURCES += daisy.c daisy.h
 libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
+libtruffle_a_SOURCES += nifty.h
 nodist_libtruffle_a_SOURCES = version.c
 noinst_HEADERS += version.h
 CLEANFILES += version.c
