fix, explicitly tell gcc about -lm (the automatism fails for -lm)
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,7 @@ noinst_PROGRAMS += truck
 truck_SOURCES = truck.c truck.ggo
 truck_LDADD = libtruffle.a
 truck_LDADD += libcoru.a
+truck_LDADD += -lm
 BUILT_SOURCES += truck.x truck.xh
 
 
