--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
 before_script:
   - autoreconf -vfi
 
-script:
-  - ./configure || (cat config.log && false)
-  - make clean all check distcheck || (cat test/test-suite.log && false)
+script: 
+  - ./configure --with-asm-backed-coroutines || (cat config.log; false)
+  - make clean all check distcheck || (cat test/test-suite.log; false)
 
 ## whitelist
 branches:
