chore, move git-version-gen script to build-aux
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,7 @@ SUBDIRS += test
 EXTRA_DIST =
 DISTCLEANFILES =
 
-EXTRA_DIST += git-version-gen
+EXTRA_DIST += build-aux/git-version-gen
 EXTRA_DIST += m4/.dir
 
 DISTCLEANFILES += version.mk
