chore, reinstantiate filter_02 test
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -134,7 +134,7 @@ TESTS += position_06.clit
 EXTRA_DIST += print_05.trod
 
 TESTS += filter_01.clit
-#TESTS += filter_02.clit
+TESTS += filter_02.clit
 EXTRA_DIST += filt_01.tser
 EXTRA_DIST += filt_01.trod
 
