test, provide more filter regressions after fiddling with the co_tser_flt() coru
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -135,6 +135,8 @@ EXTRA_DIST += print_05.trod
 
 TESTS += filter_01.clit
 TESTS += filter_02.clit
+TESTS += filter_03.clit
+TESTS += filter_04.clit
 EXTRA_DIST += filt_01.tser
 EXTRA_DIST += filt_01.trod
 
