minor, implement hash-table based steps (symbol-time-exposure-price)
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
 libtruffle_a_SOURCES += wheap.c wheap.h
+libtruffle_a_SOURCES += step.c step.h
 libtruffle_a_SOURCES += instant.c instant.h
 libtruffle_a_SOURCES += yd.h
 libtruffle_a_SOURCES += idate.c idate.h
