test, provide regressions for glue subcommand, end-of-day only
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -150,8 +150,12 @@ TESTS += glue_01.clit
 TESTS += glue_02.clit
 TESTS += glue_03.clit
 TESTS += glue_04.clit
+TESTS += glue_05.clit
+TESTS += glue_06.clit
 EXTRA_DIST += glue_01.tser
 EXTRA_DIST += glue_01.trod
+EXTRA_DIST += glue_02.tser
+EXTRA_DIST += glue_02.trod
 
 
 ## our friendly helpers
