test, (re)add some regressions for co_tser_flt() iteration in edge mode only
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -152,6 +152,10 @@ TESTS += glue_03.clit
 TESTS += glue_04.clit
 TESTS += glue_05.clit
 TESTS += glue_06.clit
+TESTS += glue_07.clit
+TESTS += glue_08.clit
+TESTS += glue_09.clit
+TESTS += glue_10.clit
 EXTRA_DIST += glue_01.tser
 EXTRA_DIST += glue_01.trod
 EXTRA_DIST += glue_02.tser
