chore, kick unused auxiliaries from libtruffle
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,11 +16,7 @@ noinst_LIBRARIES = libtruffle.a
 libtruffle_a_SOURCES = truffle.h
 libtruffle_a_SOURCES += truf-dfp754.c truf-dfp754.h
 libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
-libtruffle_a_SOURCES += gbs.c gbs.h
-libtruffle_a_SOURCES += schema.c schema.h
-libtruffle_a_SOURCES += series.c series.h
 libtruffle_a_SOURCES += trod.c trod.h
-libtruffle_a_SOURCES += cut.c cut.h
 libtruffle_a_SOURCES += mmy.c mmy.h
 libtruffle_a_SOURCES += wheap.c wheap.h
 libtruffle_a_SOURCES += step.c step.h
@@ -32,6 +28,9 @@ libtruffle_a_SOURCES += daisy.c daisy.h
 libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
 libtruffle_a_SOURCES += nifty.h
 libtruffle_a_SOURCES += coru.h
+## auxiliary giblets from the old truffle
+libtruffle_a_SOURCES += schema.c schema.h
+libtruffle_a_SOURCES += cut.c cut.h
 nodist_libtruffle_a_SOURCES = version.c
 noinst_HEADERS += version.h
 CLEANFILES += version.c
