minor, defuddle mmy/str/sym mess, sym is now union of str and mmy, all in files of their own
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,8 +16,10 @@ noinst_LIBRARIES = libtruffle.a
 libtruffle_a_SOURCES = truffle.h
 libtruffle_a_SOURCES += truf-dfp754.c truf-dfp754.h
 libtruffle_a_SOURCES += dt-strpf.c dt-strpf.h
-libtruffle_a_SOURCES += trod.c trod.h
+libtruffle_a_SOURCES += str.c str.h
 libtruffle_a_SOURCES += mmy.c mmy.h
+libtruffle_a_SOURCES += sym.c sym.h
+libtruffle_a_SOURCES += trod.c trod.h
 libtruffle_a_SOURCES += wheap.c wheap.h
 libtruffle_a_SOURCES += step.c step.h
 libtruffle_a_SOURCES += rpaf.c rpaf.h
